[package]
name = "async-ready"
version = "3.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustasync/async-ready"
documentation = "https://docs.rs/async-ready"
description = "Async readiness traits."
keywords = ["async", "ready_state", "poll_ready"]
categories = ["asynchronous"]
authors = ["The Rust Async Ecosystem Working Group"]
readme = "README.md"
edition = "2018"

[dependencies]

[dev-dependencies]
futures-preview = "0.3.0-alpha.14"
